# ibc-mail

./: .gitattributes  Cargo.toml  README.md  justfile  metadata.json  rustfmt.toml
.github/workflows/: check.yml  gh-pages.yml
artifacts/: checksums.txt  checksums_intermediate.txt  ibcmail_client-aarch64.wasm  ibcmail_client.wasm  ibcmail_server-aarch64.wasm  ibcmail_server.wasm
contracts/client/: Cargo.toml
contracts/client/examples/: local_daemon.rs  manual_deploy.rs  publish.rs  schema.rs  test_with_archway.rs
contracts/client/schema/: execute_msg.json  instantiate_msg.json  module-schema.json  query_msg.json
contracts/client/schema/raw/: execute.json  query.json  response_to_list_messages.json
contracts/client/src/: contract.rs  dependencies.rs  lib.rs
contracts/client/src/handlers/: execute.rs  instantiate.rs  migrate.rs  mod.rs  module_ibc.rs  query.rs
contracts/client/src/replies/: instantiate.rs
contracts/client/tests/: integration.rs
contracts/server/: Cargo.toml
contracts/server/examples/: local_daemon.rs  publish.rs  schema.rs
contracts/server/schema/: execute_msg.json  instantiate_msg.json  module-schema.json  query_msg.json
contracts/server/schema/raw/: execute.json  response_to_base_config.json
contracts/server/src/: contract.rs  dependencies.rs  error.rs  lib.rs  msg.rs
contracts/server/src/handlers/: execute.rs  ibc_callback.rs  instantiate.rs  mod.rs  module_ibc.rs  query.rs
contracts/server/src/replies/: deliver_msg.rs  instantiate.rs  mod.rs
contracts/server/tests/: integration.rs
docs/: book.toml
docs/book/: 404.html  print.html  searchindex.js  searchindex.json  walkthrough.html
docs/src/: SUMMARY.md  walkthrough.md
schema/: execute_msg.json  module-schema.json  query_msg.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_list_messages.json
scripts/: Cargo.toml  README.md
scripts/src/: lib.rs
tests/: Cargo.toml
tests/src/: client.rs  lib.rs
