[workspace]
members = ["contracts/*", "packages/ibcmail", "tests"]
resolver = "2"

[workspace.package]
version = "0.2.0"

[workspace.dependencies]
cosmwasm-std = "1.5.3"
cosmwasm-schema = "1.5.3"
cw-controllers = "1.1.2"
cw-storage-plus = "1.2.0"
thiserror = "1.0.50"
cw-paginate = "0.2.1"
cw-item-set = "0.7.1"
schemars = "0.8"
cw-asset = "3.0.0"
cw-semver = { version = "1.0", features = ["serde"] }
cw-orch = "0.24.1"

ibcmail = { path = "packages/ibcmail", package = "ibcmail" }
client = { path = "contracts/client", package = "ibcmail-client" }
server = { path = "contracts/server", package = "ibcmail-server" }
abstract-client = "0.23.0"
abstract-app = "0.23.0"
abstract-adapter = "0.23.0"
abstract-interface = "0.23.0"
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = "4.3.7"
const_format = "0.2.32"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
