[package]
name = "ibcmail-scripts"
version = "0.0.1"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"


[lib]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
cw-asset = { workspace = true }
ibcmail = { workspace = true }
abstract-interface = { workspace = true }

client = { workspace = true, features = ["interface"] }
server = { workspace = true, features = ["interface"] }
abstract-client = { workspace = true }
abstract-app = { workspace = true, features = ["test-utils"] }
speculoos = { workspace = true }
semver = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
cw-orch = { workspace = true }
clap = { workspace = true, features = ["derive"] }
abstract-cw-orch-polytone = { workspace = true }
abstract-interchain-tests = { workspace = true }
abstract-scripts = { workspace = true }
reqwest = { version = "0.11.9" }
log = "0.4.14"
