[package]
name = "tests"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo"

[features]
default = []

[dependencies]
abstract-app = { version = "0.22", features = ["test-utils"] }
abstract-cw-orch-polytone = "2.0.0"
abstract-interface = "0.22"
abstract-interchain-tests = { version="0.22.1"}
cw-orch = { version="0.22.2" }
cw-orch-interchain  = {version="0.1.0", features=["daemon"]}
ibcmail = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
client = { workspace = true, features = ["interface"] }
speculoos = { workspace = true }
server = { workspace = true, features = ["interface"] }
abstract-client = { workspace = true }
clap.workspace = true
env_logger = "0.11.3"
dotenv = { workspace = true }