[package]
name = "tests"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo"

[features]
default = []

[dependencies]
abstract-app = { workspace = true, features = ["test-utils"] }
abstract-cw-orch-polytone = "4.0.1"
abstract-interface = { workspace = true }
abstract-interchain-tests = { git = "https://github.com/AbstractSDK/abstract", version = "0.23.0", tag = "v0.23.0" }
#abstract-interchain-tests = { git = "https://github.com/AbstractSDK/abstract", version = "0.22.1", branch = "removemm" }
#cw-orch = { workspace = true }
cw-orch-interchain = { version = "0.3.1", features = ["daemon"] }
cw-orch = { workspace = true, features = ["daemon"] }
ibcmail = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
client = { workspace = true, features = ["interface"] }
speculoos = { workspace = true }
server = { workspace = true, features = ["interface"] }
abstract-client = { workspace = true }
clap.workspace = true
env_logger = "0.11.3"
dotenv = { workspace = true }
anyhow = "1.0.86"
