[package]
name = "tests"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo"

[features]
default = []

[dependencies]
abstract-app = { workspace = true, features = ["test-utils"] }
abstract-cw-orch-polytone = { workspace = true }
abstract-interface = { workspace = true }
#cw-orch = { workspace = true }
cw-orch-interchain = { workspace = true, features = ["daemon"] }
cw-orch = { workspace = true, features = ["daemon"] }
ibcmail = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
client = { workspace = true, features = ["interface"] }
speculoos = { workspace = true }
server = { workspace = true, features = ["interface"] }
abstract-client = { workspace = true, features = ["interchain"] }
clap = { workspace = true}
env_logger = { workspace = true }
dotenv = { workspace = true }
anyhow = "1.0.86"
